<resources>
    <!--                               System                                   -->
    <string name="app_name">Randomizer</string>
    <!--                             Navigation View                             -->
    <string name="coin">Coin</string>
    <string name="bottle">Bottle</string>
    <string name="teams">Teams</string>
    <string name="number">Number</string>
    <string name="dice">Dice</string>
    <!--                             Coin Screen                             -->
    <string name="tap_coin">Tap coin</string>
    <string name="tail">Tail</string>
    <string name="head">Head</string>
    <!--                             Number Screen                             -->
    <string name="max_value">Max value</string>
    <string name="min_value">Min value</string>
    <string name="count_value">Count of numbers</string>
    <string name="generate">Generate</string>
    <string name="value_error">Min value bigger than max!</string>
    <string name="no_value_error">No value!</string>
    <string name="no_duplication">No duplication</string>
    <!--                             Teams Screen                             -->
    <string name="count_teams">Choose a count of teams</string>
    <string name="team_hint">List the players with a space</string>
    <!--                             Dice Screen                             -->
    <string name="shake_or_tap">Shake the dice or click on each one</string>


</resources>