<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentBottle"
        android:title="@string/bottle"
        android:icon="@drawable/ic_nav_bottle"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/fragmentCoin"
        android:title="@string/coin"
        android:icon="@drawable/ic_nav_coin"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/fragmentDice"
        android:title="@string/dice"
        android:icon="@drawable/ic_nav_dice"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/fragmentNumber"
        android:title="@string/number"
        android:icon="@drawable/ic_nav_number"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/fragmentTeams"
        android:title="@string/teams"
        android:icon="@drawable/ic_nav_teams"
        android:orderInCategory="5"/>





</menu>