<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FragmentTeams">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/min_value"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvMaxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/max_value"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edMinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="none"
                android:ems="10"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:maxLength="8"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/edMaxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autoLink="none"
                android:ems="10"
                android:inputType="number"
                android:text="1000"
                android:maxLength="8"
                android:textAlignment="center"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/count_value"
            android:textSize="24sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/countValueSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:stepSize="1"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="30"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvConclusion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:text="@string/generate" />

    </LinearLayout>

</FrameLayout>